--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
 }
  
-#app {
+#root {
     background-color: #212228;
     background-image: linear-gradient(#292a30 0.1em, transparent 0.1em),
         linear-gradient(90deg, #292a30 0.1em, transparent 0.1em);
